# spectacular-dmr-demo

./: LICENSE  README.md  pyproject.toml
src/adapter/: hooks.py
src/config/: urls.py
src/config/settings/: __init__.py  s10_django_default.py  s20_applicaton.py
src/dmr_demo_api/: asgi.py  settings.py  urls.py  wsgi.py
src/dmr_demo_api/apps/controllers/: urls.py  views.py
src/dmr_demo_api/apps/django_session_auth/: urls.py
src/dmr_demo_api/apps/etag/: urls.py
src/dmr_demo_api/apps/jwt_auth/: urls.py
src/dmr_demo_api/apps/middlewares/: urls.py  views.py
src/dmr_demo_api/apps/models_example/: services.py  urls.py  views.py
src/dmr_demo_api/apps/negotiations/: urls.py  views.py
src/dmr_demo_api/apps/openapi/: urls.py
src/drf_api/: apps.py  urls.py  views.py
