[project]
name = "spectacular-dmr-adapter"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.11",
    "django-extensions>=4.1",
    "django-modern-rest[jwt,msgspec,openapi,pydantic,attrs]>=0.1.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "mergedeep>=1.3.4",
    "pyjwt>=2.11.0",
    "xmltodict-rs>=0.13.9",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
